[package]
name = "deep"
version = "0.1.0"
edition = "2021"
authors = ["EL-MASTOR <abdelwahabelmastor@gmail.com"]
description = "Downloads a webpage and the webpages it links to and so forth, with customization"
readme="README.md"
repository="https://www.github.com/EL-MASTOR/deep-downloader"
keywords=["download","webpages"]
categories=["web-utilities","automation"]

[dependencies]
reqwest = "0.12.9"
scraper = "0.21.0"
tokio = { version = "1.42.0", features = ["fs", "sync", "time", "macros", "rt-multi-thread"] }
url="2.5.4"
dashmap="6.1.0"

[profile.release]
panic = "abort"
