[package]
name = "deep"
version = "0.1.0"
edition = "2021"
authors = ["EL-MASTOR <abdelwahabelmastor@gmail.com"]
description = "`deep` creates a local version of a website by deeply diving into webpages to download the website's entire (not really) file tree, so you can interact with the website offline, written in Rust."
readme="README.md"
repository="https://www.github.com/EL-MASTOR/deep"
keywords=["download","webpages"]
categories=["web-utilities","automation"]

[dependencies]
reqwest = "0.12.9"
scraper = "0.21.0"
tokio = { version = "1.42.0", features = ["fs", "sync", "time", "macros", "rt-multi-thread"] }
url="2.5.4"
dashmap="6.1.0"

[profile.release]
panic = "abort"
